www/css/style.css
/* ... */
    /* iPad safari bug */
    @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (-webkit-min-device-pixel-ratio: 1){
        #clearsession {
            background-position: -50px 0px;
        }
    }

    @media only screen and (max-width: 620px) {
        #search_container label {
            display: none;
        }
    }

    #help, #align, #top,#selecttoggle {
        height: 35px;
        width: 35px;
        border-radius: 25px;
        border: 1px solid #000;
        font-size: 16px;
        font-family: Helvetica;
        font-weight: bolder;
        background: #fff;
        position: absolute;
        top: 10px;
        right: 30px;
        box-shadow: 2px 2px 5px #888888;
        cursor: pointer; cursor: hand;
        z-index: 100;
    }

    #selecttoggle {
        top: 100%;
        margin-top: -60px;
        right: 10px;
    }

    #selecttoggle input:not([value]) {
        display: none;
    }

    #selecttoggle.selecting {
        background-color :#dfd;
    }

    #selecttoggle input[value] {
        display: block;
        position: absolute;
        right: 100%;
        left: -600px;
        width: 560px;
        bottom: 10px;
        height: 1em;
        border: solid black 1px;
        overflow: auto;
        font-family: Courier;
        font-weight: normal;
        font-size: 0.7em;
        overflow: hidden;
    }
    #selecttoggle {
        background-color: #fff;
        background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwJSIgaGVpZ2h0PSIxMDAlIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9Ii0yMCAtMjAgMTA0IDEwNCI+DQogICAgPHJlY3QgeD0iMTAiIHk9IjEyIiB3aWR0aD0iNDQiIGhlaWdodD0iNDAiIGZpbGw9Im5vbmUiIHN0cm9rZS13aWR0aD0iNSIgc3Ryb2tlPSIjMDAwIiBzdHJva2UtZGFzaGFycmF5PSI4LDQiIC8+DQo8L3N2Zz4=);
        background-size: contain;
        background-position: 17% 17%;
        background-repeat: no-repeat;
    }

    #align {
        top: 10px;
        right: 80px;
        border: 1px solid #999;
        opacity: 0.5;
        display: none;
    }


    #align.running {
        border: 3px solid #999;
        -webkit-animation: pulsate 1s ease-out;
        -webkit-animation-iteration-count: infinite; 
        opacity: 1;
    }

    #align.ready {
        border: 1px solid #000;
        opacity: 1;
    }

    @-webkit-keyframes pulsate {
        0% {border: 1px solid #fff;}
        50% {border: 1px solid #000;}
        100% {border: 1px solid #fff;}
    }

    .search_field {
        position: absolute;
        display: block;
        top: 0px;
        right: 10px;
        z-index: 101;
        height: auto;
        background: #fff;
        border: solid black 1px;
        border-radius: 5px 5px;
        overflow: hidden;
        padding-left: 10px;
        padding-right: 10px;
        padding-top: 5px;
        padding-bottom: 5px;
        box-shadow: 3px 3px 3px #ddd;
        -webkit-transition:top 0.5s;
        -moz-transition:top 0.5s;
        -o-transition:top 0.5s;
        transition:top 0.5s;
    }
    .search_field.hidden {
        top: -150%;
        height: 0px;
        padding: 0px;
        border: 0px;
    }

/*    #help:after {
        content: "?";
        display: block;
        color: #000;
    }
*/
    div.help_box {
        top: 20%;
        left: 0;
        right: 0;
        margin: 0px auto;
        height: 300px;
        width: 655px;
        padding-left: 10px;
        background: #fff;
        position: absolute;
        border-radius: 25px;
    }
    div.help_box:after {
        content: "";
        position: absolute;
        top: 0px;
        left: 0px;
        width: 655px;
        height: 300px;
        /*background-color: #f00;*/
        background-image: url(/img/labels.svg);
        background-repeat: no-repeat;
        background-position: 0px 0px;
        background-size: 655px 300px;
    }

    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
        #help {
            display: none;
        }
    }

    div.help_box_container {
        content: " ";
        display: block;
        top: 0px;
        left: 0px;
        width: 100%;
        height: 100%;
        opacity: 0.9;
        background: #000;
        z-index: 101;
        position: fixed;
    }
    body {
      font-family: Helvetica, Arial, sans-serif;
    }
    #protein_list {
        position: absolute;
        left: 0px;
        width: 100px;
        top: 0px;
        bottom: 0px;
        overflow-x: hidden;
        overflow-y: auto;
    }
    .hint--inline:before, .hint--inline:after {
        right: 10px !important;
    }
    .hint--bottom-left:before {
        left: 30% !important;
    }

    .hint--bottom-left:after {
        right: 0% !important;
        left: auto !important;
        /*left: -150% !important;*/
    }
    #protein_list {
        background: #000;
    }
    #protein_list div {
        display: block;
        background: #000000;
        color: #ffffff;
        cursor: pointer;
        position: relative;
    }
    #protein_list div.selected, #protein_list div.selected:hover {
        background: #4444ff;
    }
    #protein_list div:hover {
        background: -webkit-linear-gradient(top, #999, #aaa);
        background: -moz-linear-gradient(top, #999, #aaa);
        background: -ms-linear-gradient(top, #999, #aaa);
        color: #000000;
    }
    #protein_list div.selected:hover {
        color: #999;
    }
    #protein_list div.done:after {
        content: '\2713';
        color: #7f7;
        position: absolute;
        right: 0px;
        top: 0px;
    }
    #zoomin, #zoomout {
        font-weight: bolder;
        font-family: Helvetica;
        font-size: 11pt;
        cursor: pointer;
        position: absolute;
        right: 20px;
        background: white;
        border: solid #AAA 1px;
        box-shadow: 2px 3px 3px #AAA;
    }
/* ... */

